unpackaged/main/default/objects/Invoice1__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <formula>CASE( Opportunity__r.QuoteBillingFrequency__c , &quot;Monthly&quot;, &quot;Monthly&quot;, &quot;Quarterly&quot;, &quot;Quarterly&quot;,&quot;Yearly&quot;,&quot;Yearly&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>