unpackaged/main/default/objects/Invoice1__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>CASE( Opportunity__r.QuotePaymentMode__c , &quot;Credit Card&quot;, &quot;Credit Card&quot;, &quot;Wire Transfer&quot;, &quot;Wire Transfer&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>