unpackaged/main/default/objects/Invoice1__c/fields/Payment_Termsquote__c.field-meta.xml
<CustomField>
    <fullName>Payment_Termsquote__c</fullName>
    <formula>CASE(Opportunity__r.QuotePaymentTime__c , &quot;Net 30&quot;, &quot;Net 30&quot;, &quot;Net 45&quot;, &quot;Net 45&quot;,&quot;Net 60&quot;,&quot;Net 60&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>